<resources>
    <string name="app_name">Ruminasu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_path_info">请添加漫画路径，轻触即可选取并添加</string>

    <string name="no_file_info">居然没找到一本漫画，看样子路径下的漫画已经不存在了呢~</string>

    <string name="order">排序方式</string>

    <string name="add">添加路径</string>

    <string name="reload">重新导入</string>

    <string name="book">封面</string>
    
    <string name="read_mode">阅读模式</string>
    <string name="top_to_bottom">从上到下</string>
    <string name="right_to_left">从右到左</string>
    <string name="left_to_right">从左到右</string>
    <string name="touch_mode">触摸模式</string>
    <string name="touch_left">左手模式</string>
    <string name="touch_right">右手模式</string>
    <string name="progress">1/23</string>

</resources>
